--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ChrisSyrnyk.github.io/lego-store",
+  "homepage": "http://ChrisSyrnyk.github.io/mock-lego-store",
   "name": "lego-store",
   "version": "0.1.0",
   "private": true,
